[package]
name = "deno_ast_wasm"
version = "0.0.1"
authors = ["Marcos Candeia <marcoscandeia123@gmail.com>"]
edition = "2018"
publish = false

[lib]
crate_type = ["cdylib"]
path = "lib.rs"

[dependencies]
deno_ast = "0.30.0"
wasm-bindgen = { version = "=0.2.84", features = ["serde-serialize"] }
js-sys = "0.3"


[build]
target = "x86_64-apple-darwin"  # or your target architecture

[target.x86_64-apple-darwin]
rustc-linker = "gcc"  # Use GCC as the C compiler